src/Components/Navbar/navbar.css
@import url('https://fonts.googleapis.com/css2?family=Mina&display=swap');
.user-nav {
  font-family: "Mina", sans-serif;
  font-size: 18px;
  background-color: rgb(0, 0, 0);
  top: 0px;
  position: fixed;
  z-index: 4;
  width: 100%;
}

.login-icon {
  margin-bottom: 20px;
}

.nav-button {
  padding: 9px 20px;
  border-radius: 50px;
  background-color: #96bdf0af;
  fill: white;
}

.nav-link:hover {
  color: rgb(191, 227, 241);
}

.admin-nav {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  background-color: #648cc0;
  color: rgba(255, 255, 255);
  text-decoration: none;
  min-height: 73px;
  top: 0px;
  position: fixed !important;
  width: 100%;
  z-index: 4;
}

.nav-admin-link {
  color: white !important;
  fill: white;
}

.sce-nav {
  flex-flow: row wrap;
  width:100%;
}

.icon-images {
  width: 20px;
  height: 20px;
}

.navlink-items {
  display: flex;
  width:20%;
  line-height: 32px;
  justify-content:space-between;
  margin-left:35%;
  column-gap: 30%;
}

#navlink-text {
  color: white;
}

.authentication {
  column-gap: 30px;
  position:absolute;
  top:10px;
  right:80px;
  line-height: 190%;
  width:290px;
  text-align: center;
}

#signin-btn {
	background-color: transparent;
	border: 1px solid #ffffff;
	color: white;
  border-radius:10px;
  font-size: 15px;
  width: 150px;
}

#signup-btn {
  background-color: #2288FF !important;
  border: none;
  color: white;
  border-radius:10px;
  font-size: 15px;
  width: 150px;
}

#logo-image {
  width: 50px;
  margin-top: -5;
  margin-bottom: -5;
  margin-left: 30px;
}

.logout-image {
  width: 18px;
  height: 18px;
}

.profile{
  position:absolute;
  top:10px;
  right:15px
}

.profile-image {
  width: 30px;
  height: 30px;
}

#btndrp-text {
  color: gray;
  font-weight: bold;
  font-size: 1rem;
  text-align: center !important;
}

.drp-item.active, .drp-item:active {
  background-color:#d3d3d3 !important;
  outline: none !important;
}

.dropdown-submenu {
  position: relative;
}

.drp-menu {
  display: none !important;
  position: absolute;
  transform: translate(-100%, 0px) !important;
}

.dropdown-submenu:hover .drp-menu {
  display: block !important;
}

.navbar-toggler {
  padding: 0 !important;
  border: none !important;
}

.border {
  display: block;
  margin-top: 5px;
  margin-bottom: 5px;
  padding: 1px;
  width: 30px;
  background:	#00008B;
}

.hamburger-button {
  background-color: #4e6fa16c !important;
  border-color: #ffffff00 !important;
  border-radius: 4px !important;
}

#toggler-left {
  display: inline-flex;
}

#user-dark{
  position: absolute;
  left: 5rem;
}

#admin-dark{
  position: absolute;
  left: 12rem;
}

#admin-title{
  display: inline-flex;
}

#sun-icon{
  width: 0.7rem;
  height: 1.6rem;
  margin-right: 1.24rem;
  
}

#dark-toggler {
  margin-top: 0.18rem;
}

#admin-toggler{
  margin-top: 0.32rem;
}

#moon-icon{
  width: 1.1rem;
  height: 1.9rem;
}

